# kyco

./: .flake8  .gitignore  .pre-commit-config.yaml  .staging  README.md  docker-compose.yml  pyproject.toml  requirements-dev-frozen.txt  requirements-dev.txt  requirements-frozen.txt  test_log.py
infrastructure/: app.py  emails_templates_config.py  requirements-dev-frozen.txt
infrastructure/assets/: glue-cdk-asset-etl.py  glue-parquet-etl.py  redshift-load-etl.py
infrastructure/stacks/: chaliceapp.py  cognito_auth.py  db.py  explora.py  glue.py  ui.py
infrastructure/stacks/examples/: glue_crawler.json  glue_crawler_by_cdk.json
kycoui/: next.config.js  package-lock.json  package.json
redux-workflow/: .env.example  package-lock.json  package.json
redux-workflow/src/: App.js  index.js
redux-workflow/src/helpers/: PrivateRoute.js  urls.js
runtime/: app.py  chalice_backend.code-workspace  cli.py  requirements-dev.txt  requirements.txt  test.txt
runtime/.chalice/: config.json
runtime/chalicelib/: __init__.py  blueprint.py  config.py  enums.py  extenions.py  logger_app.py  middlewares.py  models.py  tasks.py  utils.py  utils.py.bak
runtime/chalicelib/controller/: auth.py  base.py  deposit.py  dev.xml  porfolio.py  telegram_bot.py  test.xml  users.py  wallet.py
runtime/chalicelib/db/: base.py  base_class.py  init_db.py  session.py
runtime/chalicelib/dynamo_db/: base.py  samples.py
runtime/chalicelib/events/: __init__.py  base.py  event_type.py
runtime/chalicelib/modeler/: globals.py  mdm.csv  mdm.py  mdm2.py  mdm_loaders.py  mdm_unused.py  modeler.py  models.py  schemas.py  types.py
runtime/migrations/: env.py
runtime/tasks/: cli.py
runtime/tests/: conftest.py  test_auth.py  test_cron.py  test_sqs_send_email.py
static/emails-template/: NEW_OTP.html  PORFOLIO_OVERVIEW.html
(+88 files in other folders)
