[tool.poetry]
name = "kyco"
version = "0.1.0"
description = ""
authors = ["Bao Tran <tranthanhbao2207@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "runtime/migrations"

[tool.isort]
profile = "black"
skip_glob = "runtime/migrations/*"
# exclude = "runtime/migrations"