[tool.poetry]
name = "kyco"
version = "0.1.0"
description = "Currently this file is only for local development.Waiting for migration chalice author(aws)"
authors = ["Bao Tran <tranthanhbao2207@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
kyco = "tasks.cli:main"

[tool.poetry.dependencies]
python = "3.10.9"
boto3 = "^1.28.14"
requests = "^2.31.0"
# psycopg2-binary = "^2.9.6"
pydantic = {extras = ["email"], version = "^1"}
# pydantic-settings = "^2.0.2"
pyjwt = "^2.8.0"
pygithub = "^1.59.0"
binance-connector = "^3.1.1"
ksuid = "^1.3"
aws-lambda-powertools = "^2.22.0"
sqlalchemy = "^2.0.19"
# graphene = "^3.1"
psycopg = {extras = ["binary"], version = "^3.1.12"}

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
flake8 = "5.0.4"
pre-commit = "^3.3.3"
black = "^23.7.0"
isort = "^5.12.0"
alembic = "^1.11.1"
jinja2 = "^3.1.2"
rich = "^13.4.2"
python-dotenv = "^1.0.0"
chalice = "^1.29.0"
mypy = "^1.4.1"
aws-cdk-lib = "^2.88.0"
googlesearch-python = "^1.2.3"
typer = "^0.9.0"
loguru = "^0.7.2"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "runtime/migrations"

[tool.isort]
profile = "black"
skip_glob = "runtime/migrations/*"
# exclude = "runtime/migrations"